--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/calc.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="assets/favicon.png" />
   </head>
   <body>
@@ -98,7 +98,7 @@
      
     </footer>
     <!-- </div> -->
-    <script src="js/calc.js"></script>
+    <script src="js/script.js"></script>
    
   </body>
 </html>
